# Private_company_transactions

./: README.md
private_company_transactions_solution/: README.md  app.py  predicting_private_company_transactions_submission.pptx  pyproject.toml  requirements.txt
private_company_transactions_solution/configs/: signals.yaml
private_company_transactions_solution/data/: companies_sample.csv  demo_articles.csv  public_source_manifest.csv
private_company_transactions_solution/docs/: data_sources.md
private_company_transactions_solution/outputs/: predictions.csv
private_company_transactions_solution/src/private_tx_predictor/: cli.py  config.py  schemas.py
private_company_transactions_solution/src/private_tx_predictor/extraction/: entity_resolution.py  llm_prompt.py  rules.py
private_company_transactions_solution/src/private_tx_predictor/features/: build_features.py
private_company_transactions_solution/src/private_tx_predictor/ingestion/: companies.py  demo.py  gdelt.py  source_manifest.py
private_company_transactions_solution/src/private_tx_predictor/models/: backtest.py  ranker.py
private_company_transactions_solution/src/private_tx_predictor/product/: reporting.py
private_company_transactions_solution/tests/: test_pipeline.py
