[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "private-tx-predictor"
version = "1.0.0"
description = "Predicting private-company transactions from public data"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "requests>=2.31.0",
  "scikit-learn>=1.3.0",
  "pyyaml>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
